--- a/lm-compass/package.json
+++ b/lm-compass/package.json
@@ -14,7 +14,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +23,7 @@
     "lucide-react": "^0.544.0",
     "marked": "^16.4.1",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "openai": "^6.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
