--- a/lm-compass/.env-sample
+++ b/lm-compass/.env-sample
@@ -1,3 +1,3 @@
 OPENROUTER_API_KEY=your-openrouter-api-key
-NEXT_PUBLIC_SUPABASE_URL=URL
-NEXT_PUBLIC_SUPABASE_ANON_KEY=KEY
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key-here
