update env sample

--- a/lm-compass/.env-sample
+++ b/lm-compass/.env-sample
@@ -5,3 +5,5 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key-here
 # Clerk Authentication
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_...
 CLERK_SECRET_KEY=sk_test_...
+# API Key Encryption
+DATA_ENCRYPTION_KEY=your-data-encryption-key-here
