--- a/lm-compass/package.json
+++ b/lm-compass/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "framer-motion": "^12.34.0",
     "katex": "^0.16.25",
     "lucide-react": "^0.544.0",
     "marked": "^16.4.2",
